--- a/doc/master.adoc
+++ b/doc/master.adoc
@@ -1,16 +1,31 @@
 :imagesdir: images
 :title-logo-image: static-images/logo.png
+:toclevels: 3
 
 = Continuous documentation
 
 :sectnums:
-:leveloffset: +1
+:leveloffset: 1
 
 include::./ch1.adoc[]
 
 include::./ch2.adoc[]
 
+:leveloffset: 2
+= MARKDOWN
+
 include::./markdown/README.md.adoc[]
+
+= SAMPLE-REPO
+
+include::./sample-repo/README.md.adoc[]
+
+:leveloffset: 3
+= NESTED-FOLDER
+
+include::./sample-repo/nested-folder/README.md.adoc[]
+
+:leveloffset: 1
 
 = Get the PDF
 link:master.pdf[Download master.pdf]
