--- a/doc/master.adoc
+++ b/doc/master.adoc
@@ -1,6 +1,9 @@
 :imagesdir: images
 :title-logo-image: static-images/logo.png
 :toclevels: 3
+:source-highlighter: pygments
+:pygments-style: emacs
+:icons: font
 
 = Continuous documentation
 
