--- a/test-content/ch2.adoc
+++ b/test-content/ch2.adoc
@@ -1,25 +1,37 @@
-= Second chapter
+= The Great American Novel
 
 .ASCII-based artwork
 [ditaa, doc-storage, svg]
 ....
-           :
-           |
-/--------\ | /-------\
-|Document| | |Storage|
-|        | | |       |
-|     {d}| | |    {s}|
-\----+---/ | \-------/
-     |     |     ^
-     |     |     |
-     \-----------/
-           |
-           :
+/=-----------------------------------------------------------\
+:                                                            :
+|  +--------------------+           +---------------------+  |         +-----------------+
+|  |                    |           |                     |  |         |                 |
+|  | CronJob            |           | Pod                 |  |         | etcd            |
+|  |                    +---------->+     /-------\ /---\ +<---------->+ {s}             |
+|  |             Nightly|           |     |shunit2| |oc | |  :         |                 |
+|  |                    |       +-->+     \-------/ \---/ |  |         |                 |
+|  +--------------------+       |   +----------+----------+  |         +-----------------+
+|                               |              ^             | 
+|                               |              |             | 
+|                               |   +----------+----------+  |         +-----------------+
+|                               |   |                     |  |         |                 |
+|                               |   | ServiceAccount      |  |         | ClusterRole     |
+|                               |   |                     +<-----------+                 |
+|                               |   |                     |  :         |   cluster–reader|
+|                               |   |                     |  |         |                 |
+|                               |   +---------------------+  |         +-----------------+
+|                               |                            | 
+|                               |                            | 
+|                               |   +---------------------+  |         +-----------------+
+|                               |   |                     |  |         |                 |
+|                               |   | ConfigMap           |  |         | Git             |
+|                               +---+                     +<-----------+                 |
+|                                   |                     |  |         |     Test scripts|
+|                                   |                     |  |         | {d}             |
+|                                   +---------------------+  |         +-----------------+
+|Namespace cluster–tests                                     |  
+\=-----------------------------------------------------------/
 ....
-
-.Logo bitmap courtesy of https://github.com/pigment/fake-logos
-image::logo.png[Company logo]
-
-== Section
 
 CAUTION: This looks important, so be sure not to forget it.
